Parametrized tenant mapping